Normal maps broken in master #90776

Closed
opened 2021-08-19 15:55:37 +02:00 by Steffen Dünner · 10 comments

System Information
Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics (CML GT2) Intel 4.6 (Core Profile) Mesa 21.0.3

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-19 12:29, hash: 5b97c00e9f
Worked: blender-3.0.0-alpha+cycles-x.4833c1775ce4-linux.x86_64-release

Caused by b8ecdbcd96

Short description of error
Normal mapping with the "Normal Map" node looks totally broken in the latest master. I didn't try to find the commit that causes it yet (no time at the moment) but I think it began 1-2 days ago.

Exact steps for others to reproduce the error

  • Open the attached blend file
    Normal_Map_Bug_v01.blend
  • Press F12 or start a preview render. It happens with GPU and CPU.
  • Here's the result from the latest working version
    Normals_Working.png
  • And here's how it looks now
    Normals_Broken.png

I know that the attached image is not a proper normal map, but it also shows the kind of artefacts that occur now.

**System Information** Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Mesa Intel(R) UHD Graphics (CML GT2) Intel 4.6 (Core Profile) Mesa 21.0.3 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-19 12:29, hash: `5b97c00e9f` Worked: blender-3.0.0-alpha+cycles-x.4833c1775ce4-linux.x86_64-release Caused by b8ecdbcd96 **Short description of error** Normal mapping with the "Normal Map" node looks totally broken in the latest master. I didn't try to find the commit that causes it yet (no time at the moment) but I think it began 1-2 days ago. **Exact steps for others to reproduce the error** - Open the attached blend file [Normal_Map_Bug_v01.blend](https://archive.blender.org/developer/F10292042/Normal_Map_Bug_v01.blend) - Press F12 or start a preview render. It happens with GPU and CPU. - Here's the result from the latest working version ![Normals_Working.png](https://archive.blender.org/developer/F10292047/Normals_Working.png) - And here's how it looks now ![Normals_Broken.png](https://archive.blender.org/developer/F10292050/Normals_Broken.png) I know that the attached image is not a proper normal map, but it also shows the kind of artefacts that occur now.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

#90859 was marked as duplicate of this issue

#90859 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @kevindietrich, @brecht

Added subscribers: @kevindietrich, @brecht

@kevindietrich, probably your recent change.

@kevindietrich, probably your recent change.

This issue was referenced by blender/cycles@5e10c19f41

This issue was referenced by blender/cycles@5e10c19f41e592a768d25d0eda6ec42235579678

This issue was referenced by c0dd6f1164

This issue was referenced by c0dd6f1164e0247c7e21d57457c88a053e38f7da

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2021-08-19 20:38:32 +02:00

Added subscriber: @Dec

Added subscriber: @Dec
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90776
No description provided.